--- a/templates/typescript/.vscode/settings.json
+++ b/templates/typescript/.vscode/settings.json
@@ -14,6 +14,7 @@
   // "editor.codeActionsOnSave": {
   //   "source.fixAll.eslint": true
   // },
+  "eslint.experimental.useFlatConfig": true,
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "files.eol": "\n",
