--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -6,13 +6,20 @@
     "build": "remix vite:build",
     "dev": "remix dev",
     "lint": "concurrently -k \"npm:lint:*\"",
+    "lint:js": "eslint --ignore-pattern 'build' --ignore-pattern 'public/build' .",
     "lint:ts": "tsc",
     "start": "remix-serve build/server/index.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@remix-run/dev": "^2.9.2",
+    "@stylistic/eslint-plugin": "^2.1.0",
+    "@types/eslint": "^8.56.10",
     "@types/react": "^18.3.2",
     "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.3.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
   },
