--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -21,9 +21,11 @@
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.3.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0",
     "vite": "^5.2.11"
   },
   "dependencies": {
+    "@remix-run/css-bundle": "^2.9.2",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
