--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -6,6 +6,7 @@
     "build": "remix vite:build",
     "dev": "remix dev",
     "lint": "concurrently -k \"npm:lint:*\"",
+    "lint:css": "stylelint \"**/*.css\"",
     "lint:js": "eslint --ignore-pattern 'build' --ignore-pattern 'public/build' .",
     "lint:ts": "tsc",
     "start": "remix-serve build/server/index.js"
@@ -20,6 +21,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.3.0",
+    "lint-staged": "^15.2.5",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.11.0",
     "vite": "^5.2.11"
