--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -9,6 +9,7 @@
     "lint:css": "stylelint \"**/*.css\"",
     "lint:js": "eslint --ignore-pattern 'build' --ignore-pattern 'public/build' .",
     "lint:ts": "tsc",
+    "prepare": "husky",
     "start": "remix-serve build/server/index.js"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.3.0",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "stylelint": "^16.6.1",
     "stylelint-config-standard": "^36.0.0",
