--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -10,20 +10,33 @@
     "lint:js": "eslint --ignore-pattern 'build' --ignore-pattern 'public/build' .",
     "lint:ts": "tsc -p tsconfig.json",
     "prepare": "husky",
-    "start": "remix-serve build/server/index.js"
+    "start": "remix-serve build/server/index.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
     "@eslint/js": "^9.3.0",
     "@remix-run/dev": "^2.9.2",
+    "@storybook/addon-essentials": "^8.1.6",
+    "@storybook/addon-interactions": "^8.1.6",
+    "@storybook/addon-links": "^8.1.6",
+    "@storybook/addon-onboarding": "^8.1.6",
+    "@storybook/blocks": "^8.1.6",
+    "@storybook/react": "^8.1.6",
+    "@storybook/react-vite": "^8.1.6",
+    "@storybook/test": "^8.1.6",
     "@stylistic/eslint-plugin": "^2.1.0",
     "@types/eslint": "^8.56.10",
     "@types/react": "^18.3.2",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
+    "storybook": "^8.1.6",
     "stylelint": "^16.6.1",
     "stylelint-config-standard": "^36.0.0",
     "tsc-files": "^1.1.4",
@@ -39,5 +52,10 @@
     "isbot": "^4.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
