--- a/templates/prisma/.vscode/settings.json
+++ b/templates/prisma/.vscode/settings.json
@@ -10,10 +10,10 @@
   // the values you've explicitly set, above.
   "editor.detectIndentation": false,
   // https://eslint.style/guide/faq#how-to-auto-format-on-save
-  // "editor.formatOnSave": false,
-  // "editor.codeActionsOnSave": {
-  //   "source.fixAll.eslint": true
-  // },
+  "editor.formatOnSave": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "eslint.experimental.useFlatConfig": true,
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
