--- a/templates/typescript/.vscode/settings.json
+++ b/templates/typescript/.vscode/settings.json
@@ -12,7 +12,7 @@
   // https://eslint.style/guide/faq#how-to-auto-format-on-save
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
   "eslint.experimental.useFlatConfig": true,
   "files.insertFinalNewline": true,
