--- a/templates/typescript/.vscode/settings.json
+++ b/templates/typescript/.vscode/settings.json
@@ -10,9 +10,21 @@
   // the values you've explicitly set, above.
   "editor.detectIndentation": false,
   // https://eslint.style/guide/faq#how-to-auto-format-on-save
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
+  "[typescript]": {
+    "editor.formatOnSave": false
+  },
+  "[typescriptreact]": {
+    "editor.formatOnSave": false
+  },
+  "[javascript]": {
+    "editor.formatOnSave": false
+  },
+  "[javascriptreact]": {
+    "editor.formatOnSave": false
+  },
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+    "source.fixAll.eslint": "explicit",
   },
   "eslint.experimental.useFlatConfig": true,
   "files.insertFinalNewline": true,
