--- a/templates/typescript/.vscode/settings.json
+++ b/templates/typescript/.vscode/settings.json
@@ -23,8 +23,12 @@
   "[javascriptreact]": {
     "editor.formatOnSave": false
   },
+  "[css]": {
+    "editor.formatOnSave": false
+  },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
+    "source.fixAll.stylelint": "explicit"
   },
   "eslint.experimental.useFlatConfig": true,
   "files.insertFinalNewline": true,
