--- a/templates/typescript/.lintstagedrc
+++ b/templates/typescript/.lintstagedrc
@@ -1,4 +1,5 @@
 {
-  "*.{js,jsx,ts,tsx}": ["npm run lint:js", "tsc-files"],
+  "*.{js,jsx,ts,tsx}": ["npm run lint:js"],
+  "*.{ts,tsx}": ["tsc-files"],
   "*.css": ["npm run lint:css"]
 }
