--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "@remix-run/serve": "^2.9.2",
     "isbot": "^4.4.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "eslintConfig": {
     "extends": [
