--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "dev": "node server.js",
     "lint": "concurrently -k \"npm:lint:*\"",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:js": "eslint --ignore-pattern 'build' --ignore-pattern 'public/build' .",
     "lint:ts": "tsc -p tsconfig.json",
     "prepare": "husky",
-    "start": "remix-serve build/server/index.js",
+    "start": "node server.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
     "@eslint/js": "^9.3.0",
+    "@fastify/middie": "^8.3.1",
     "@remix-run/dev": "^2.9.2",
     "@storybook/addon-essentials": "^8.1.6",
     "@storybook/addon-interactions": "^8.1.6",
@@ -45,10 +46,14 @@
     "vite": "^5.2.11"
   },
   "dependencies": {
+    "@fastify/compress": "^7.0.3",
+    "@fastify/static": "^7.0.4",
+    "@mcansh/remix-fastify": "^3.3.3",
     "@remix-run/css-bundle": "^2.9.2",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "fastify": "^4.28.1",
     "isbot": "^4.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
