--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,11 @@
 {
-  "*.{js,jsx,ts,tsx}": ["npm run lint:js"],
-  "*.{ts,tsx}": ["tsc-files"],
-  "*.css": ["npm run lint:css"]
+  "*.{js,jsx,ts,tsx}": [
+    "npm run lint:js -- --fix"
+  ],
+  "*.{ts,tsx}": [
+    "tsc-files"
+  ],
+  "*.css": [
+    "npm run lint:css -- --fix"
+  ]
 }
