--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@stylistic/eslint-plugin": "^2.1.0",
     "@types/eslint": "^8.56.10",
     "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
@@ -52,9 +53,15 @@
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "isbot": "^4.4.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
+    "remix-i18next": "^6.3.0"
   },
   "eslintConfig": {
     "extends": [
