Add clinic scripts

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dev": "npm run dev:server && npm run dev:css",
     "dev:server": "remix vite:dev",
     "dev:css": "tcm --watch ./app",
+    "clinic:doctor": "npm run build && npx clinic doctor --autocannon / --method GET -- node ./node_modules/.bin/remix-serve build/server/index.js",
+    "clinic:flame": "npm run build && npx clinic flame --autocannon / --method GET -- node ./node_modules/.bin/remix-serve build/server/index.js",
+    "clinic:bubbleprof": "npm run build && npx clinic bubbleprof --autocannon / --method GET -- node ./node_modules/.bin/remix-serve build/server/index.js",
+    "clinic:heapprofiler": "npm run build && npx clinic heapprofiler --autocannon / --method GET -- node ./node_modules/.bin/remix-serve build/server/index.js",
     "lint": "concurrently -k \"npm:lint:*\"",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:js": "eslint --ignore-pattern 'build' --ignore-pattern 'public/build' .",
