--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@fastify/compress": "^7.0.3",
+    "@fastify/helmet": "^11.1.1",
     "@fastify/static": "^7.0.4",
     "@mcansh/remix-fastify": "^3.3.3",
     "@remix-run/css-bundle": "^2.9.2",
