Attempt to fail silently if pr already exists

--- a/.github/workflows/propagate.yml
+++ b/.github/workflows/propagate.yml
@@ -17,27 +17,27 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: propagate to express
-        run: gh pr create -B express -H typescript --title 'Merge typescript into express' --body 'Created by Github action'
+        run: gh pr create -B express -H typescript --title 'Merge typescript into express' --body 'Created by Github action' || echo "Pull request already exists or another error occurred."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: propagate to i18next
-        run: gh pr create -B i18next -H typescript --title 'Merge typescript into i18next' --body 'Created by Github action'
+        run: gh pr create -B i18next -H typescript --title 'Merge typescript into i18next' --body 'Created by Github action' || echo "Pull request already exists or another error occurred."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: propagate to fastify
-        run: gh pr create -B fastify -H typescript --title 'Merge typescript into fastify' --body 'Created by Github action'
+        run: gh pr create -B fastify -H typescript --title 'Merge typescript into fastify' --body 'Created by Github action' || echo "Pull request already exists or another error occurred."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: propagate to sessions
-        run: gh pr create -B sessions -H typescript --title 'Merge typescript into sessions' --body 'Created by Github action'
+        run: gh pr create -B sessions -H typescript --title 'Merge typescript into sessions' --body 'Created by Github action' || echo "Pull request already exists or another error occurred."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: propagate to prisma
-        run: gh pr create -B prisma -H typescript --title 'Merge typescript into prisma' --body 'Created by Github action'
+        run: gh pr create -B prisma -H typescript --title 'Merge typescript into prisma' --body 'Created by Github action' || echo "Pull request already exists or another error occurred."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -48,7 +48,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: propagate to express-socket
-        run: gh pr create -B express-socket -H express --title 'Merge express into express-socket' --body 'Created by Github action'
+        run: gh pr create -B express-socket -H express --title 'Merge express into express-socket' --body 'Created by Github action' || echo "Pull request already exists or another error occurred."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -59,6 +59,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: propagate to fastify-socket
-        run: gh pr create -B fastify-socket -H fastify --title 'Merge fastify into fastify-socket' --body 'Created by Github action'
+        run: gh pr create -B fastify-socket -H fastify --title 'Merge fastify into fastify-socket' --body 'Created by Github action' || echo "Pull request already exists or another error occurred."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
